--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,14 @@ nav{
     height: 80px;
     background-color: #ff6900;
     color: white;
-    
+
     display: flex;
     justify-content: space-between;
 
-    position: fixed;
+    /* position: fixed; */
 }
 
-/* .left-menu{
 
-    display: flex;
-} */
 
 .left-menu,.center-menu,.right-menu,.left-menu ul,.right-menu ul {
     
@@ -39,3 +36,51 @@ nav{
     /* align-items: center; */
     height: 40px;
 }
+
+/* ------------body------------ */
+
+.container{
+    width: 1000px;
+    margin: auto;
+    display: flex;
+}
+
+.row{
+    display: flex;
+    gap: 20px;
+    
+}
+
+.card{
+    margin-top: 100px;
+    width: 300px;
+    position: relative;
+}
+.card img{
+ 
+    width: 300px;
+}
+
+.hover-img{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+
+}
+
+.card:hover .hover-img{
+    display: inline-block;
+}
+
+.hearth{
+    background-color: white;
+    padding: 0 10px;
+    position: absolute;
+    font-size: 2em;
+    top: 10px;
+    right: 0;
+}
+/* .hearth:hover{
+    color: red;
+} */
