--- a/css/style.css
+++ b/css/style.css
@@ -4,16 +4,23 @@
     box-sizing: border-box;
 }
 
-nav{
+header{
     width: 100%;
     height: 80px;
     background-color: #ff6900;
     color: white;
 
+    display: flex; 
+    position: fixed;
+    z-index: 2;
+}
+
+nav{
     display: flex;
     justify-content: space-between;
+    width: 100%;
 
-    /* position: fixed; */
+    
 }
 
 
@@ -37,12 +44,17 @@ nav{
     height: 40px;
 }
 
-/* ------------body------------ */
+/* ------------main------------ */
+
+
+main{
+    padding-top: 80px;
+}
 
 .container{
     width: 1000px;
     margin: auto;
-    display: flex;
+    
 }
 
 .row{
@@ -51,14 +63,25 @@ nav{
     
 }
 
+
+
 .card{
-    margin-top: 100px;
+    margin-top: 80px;
     width: 300px;
     position: relative;
 }
 .card img{
  
     width: 300px;
+}
+
+.hearth{
+    background-color: white;
+    padding: 0 10px;
+    position: absolute;
+    font-size: 2em;
+    top: 10px;
+    right: 0;
 }
 
 .hover-img{
@@ -73,14 +96,14 @@ nav{
     display: inline-block;
 }
 
-.hearth{
-    background-color: white;
-    padding: 0 10px;
-    position: absolute;
-    font-size: 2em;
-    top: 10px;
-    right: 0;
-}
 /* .hearth:hover{
     color: red;
 } */
+
+.price{
+    color: #ff0000;
+}
+
+.not-price{
+    text-decoration-line: line-through;
+}
