--- a/css/style.css
+++ b/css/style.css
@@ -67,8 +67,7 @@ main{
 }
 
 .card img{
- 
-    width: 250px;
+    width: 100%;
 }
 
 .hearth{
@@ -112,6 +111,10 @@ main{
 
 }
 
+/* .card:hover .hover-img{
+    display: inline-block;
+} */
+
 .card:hover .hover-img{
     display: inline-block;
 }
@@ -152,6 +155,8 @@ footer{
 .footer-left ul li{
     list-style-type: none;
     flex-direction: row;
+    padding: 5px;
+    font-size: small;
 
 }
 
